--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
